--- a/Geografi.html
+++ b/Geografi.html
@@ -39,64 +39,54 @@
    
 
     <!--CONTENT 2-->
-     <div class="container-content">
+<div class="container-content">
+    <a href="https://youtu.be/bQ97ykrjuys?si=UEIKPfMnpWRpderP"
+     class="a-content">
+         <img src="tata ruang.jpg" class="img-content" />
+         <p>Konsep Wilayah dan Tata Ruang</p>
+        </a>
+    </div>
+
+    <div class="container-content">
+    <a href="https://youtu.be/invdwUjcYxA?si=mp5LCT4_CMwLCBM7"
+     class="a-content">
+         <img src="letak.jpg" class="img-content" />
+         <p>Letak Astronomis, Letak Geografis dan Letak Geologis Indonesia</p>
+        </a>
+    </div>
+
+    <div class="container-content">
+    <a href="https://youtu.be/No_TqrSXCgA?si=kyEiJas-cET_Khpt"
+     class="a-content">
+         <img src="wilayah.jpg" class="img-content" />
+         <p>Letak dan batas wilayah indonesia</p>
+        </a>
+    </div>
+
+    <div class="container-content">
+    <a href="https://m.youtube.com/watch?v=yIlDd8FNEGU&pp=4gcMEgpwZXJwbGV4aXR5"
+     class="a-content">
+         <img src="Kerja.jpg" class="img-content" />
+         <p>Dinamika Kerja sama Antarnegara dan pengaruhnya</p>
+        </a>
+    </div>
+
+    <div class="container-content">
+    <a href="https://m.youtube.com/watch?v=jP2kb61G_Go&pp=4gcMEgpwZXJwbGV4aXR5"
+     class="a-content">
+         <img src="pembangunan wilayah.jpg" class="img-content" />
+         <p>Pembangunan Wilayah, Revolusi Industri, dan Pengaruhnya</p>
+        </a>
+    </div>
+
+    <div class="container-content">
     <a href="https://www.youtube.com/watch?v=UX885MOoq_A"
      class="a-content">
-         <img src="" class="img-content" />
-         <p>COMING SOON</p>
-        </a>
-    </div>
-
-         <div class="container-content">
-    <a href="https://www.youtube.com"
-     class="a-content">
-         <img src="" class="img-content" />
-         <p>COMING SOON</p>
+         <img src="perkembangan.jpg" class="img-content" />
+         <p>Pengembangan Wilayah, Tata Ruang, dan Pengaruh terhadap kebahagiaan</p>
         </a>
     </div>
 
 
-    <div class="container-content">
-    <a href="https://www.youtube.com"
-     class="a-content">
-         <img src="" class="img-content" />
-         <p>COMING SOON</p>
-        </a>
-    </div>
-
-    <div class="container-content">
-    <a href="https://www.youtube.com"
-     class="a-content">
-         <img src="" class="img-content" />
-         <p>COMING SOON</p>
-        </a>
-    </div>
-
-     <div class="container-content">
-    <a href="https://www.youtube.com"
-     class="a-content">
-         <img src="" class="img-content" />
-         <p>COMING SOON</p>
-        </a>
-    </div>
-
-     <div class="container-content">
-    <a href="https://www.youtube.com"
-     class="a-content">
-         <img src="" class="img-content" />
-         <p>COOMING SOON</p>
-        </a>
-    </div>
 
     <!--CONTENT 2 END-->
-
-
-     
-      <!-- FOOTER -->
-<div class="container-footer">
-    <h1 class="h1-footer">Website Ini Dibuat Dalam Rangka Pembelajaran</h1>
-</div>
-      <!-- FOOTER END -->
-     </div>
-    </body>
-</html>
