--- a/Matematika.html
+++ b/Matematika.html
@@ -14,7 +14,20 @@
             <a href="Index.html" class="a-navbar" >HOME</a>
             </li>
             <li class="li-navbar">
-            <class="a-navbar" >Matematika SMA</a> 
+            <a href="Matematika.html" class="a-navbar" >Matematika</a> 
+            </li>
+            <li class="li-navbar">
+            </li>
+            <li class="li-navbar">
+            <a href="Biologi.html" class="a-navbar" >Biologi</a>
+            </li>
+            <li class="li-navbar">
+            <a href="Geografi.html" class="a-navbar" >Geografi</a>
+            </li>
+            <li class="li-navbar">
+            <a href="Sosiologi.html" class="a-navbar" >Sosiologi</a>
+            <li class="li-navbar">
+             <a href="Kimia.html" class="a-navbar" >KIMIA</a>
             </li>
             </ul>
             </div>
@@ -77,14 +90,3 @@
     </div>
 
     <!--CONTENT 2 END-->
-
-
-     
-      <!-- FOOTER -->
-<div class="container-footer">
-    <h1 class="h1-footer">Website Ini Dibuat Dalam Rangka Pembelajaran</h1>
-</div>
-      <!-- FOOTER END -->
-     </div>
-    </body>
-</html>
