--- a/Sosiologi.html
+++ b/Sosiologi.html
@@ -43,7 +43,7 @@
     <div class="container-content">
     <a href="https://youtu.be/1iAUTwuh3B0?feature=shared"
      class="a-content">
-         <img src="" class="img-content" />
+         <img src="komunitas.jpg" class="img-content" />
          <p>Pemberdayaan Komunitas</p>
         </a>
     </div>
@@ -51,7 +51,7 @@
     <div class="container-content">
     <a href="https://youtu.be/xCxS4lNrnB0?feature=shared"
      class="a-content">
-         <img src="" class="img-content" />
+         <img src="globalisasi.jpg" class="img-content" />
          <p>Masalah Sosial Akibat Globalisasi</p>
         </a>
     </div>
@@ -59,15 +59,15 @@
      <div class="container-content">
     <a href="https://youtu.be/H02YzN3POQU?feature=shared"
      class="a-content">
-         <img src="" class="img-content" />
-         <p>Perkembangan Masyarakat Digital</p>
+         <img src="digital.webp" class="img-content" />
+           <p> Perkembangan Masyarakat Digital</p>
         </a>
     </div>
 
      <div class="container-content">
     <a href="https://youtu.be/eUBRVWQIF2s?feature=shared"
      class="a-content">
-         <img src="" class="img-content" />
+         <img src="globalisaasi.webp" class="img-content" />
          <p>Globalisasi</p>
         </a>
     </div>
@@ -76,7 +76,7 @@
 <div class="container-content">
     <a href="https://youtu.be/dpEYWRhhG5A?feature=shared"
      class="a-content">
-         <img src="" class="img-content" />
+         <img src="sosial.webp" class="img-content" />
          <p>Teori Perubahan Sosial</p>
         </a>
     </div>
